* 2007-07-31 - dennis.sieben@open-xchange.com

  - Bugfix ID#8597 [DEV] searchContextByFilestoreId,searchContextByFilestore and
    searchContextByDatabase must only return contexts bound to specific SERVER_NAME
    
* 2007-07-30 - choeger@open-xchange.com

  - Bugfix ID#8592 Misleading server response if "listuser" doesn't find any match

* 2007-07-30 - dennis.sieben@open-xchange.com

  - Bugfix ID#8575 CLT createcontext: It should be possible to create a mapping between contextID
  and context name during createcontext and not only on changecontext
  
* 2007-07-26 - dennis.sieben@open-xchange.com

  - Bugfix ID#8553 CLT: After running CLT no reasonable message on console appear for user

* 2007-07-25 - choeger@open-xchange.com

  - Bugfix ID#8550 generatempasswd not developed to be used by humans
  made generatempasswd usable by humans... :-)

* 2007-07-11 - manuel.kraft@open-xchange.com

  -  Bugfix ID#8379 listcontext, lmapping not in csv output

* 2007-07-09 - manuel.kraft@open-xchange.com

  -  Bugfix ID#7302 changecontext is missing

* 2007-06-29 - dennis.sieben@open-xchange.com

  -  Bugfix ID#8171 need for a tool that does reset the jmx max values

* 2007-06-21 - manuel.kraft@open-xchange.com

  -  Bugfix ID#7675 LTs to manage users can not deal with modules

* 2007-06-12 - dennis.sieben@open-xchange.com

  -  Bugfix ID#7657 console clients check extension errors in the wrong place
  
* 2007-05-29 - choeger@open-xchange.com

  - Bugfix ID#7595 Groups member in several contexts are deleted on context delete